--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,5 @@
 <!doctype html>
 <head>
-<title>Hello from Flask</title>
-
-<script src= {{ url_for('static', filename = 'jquery-3.2.1.min.js')}}></script>
-<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='slider.css') }}" />
-<script src= {{ url_for('static', filename = 'slider.js')}}></script>
-
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -17,10 +11,7 @@
 </head>
 
 <body>
-
-
-
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -30,15 +21,37 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="">TVA Modell</a>
+      <a class="navbar-brand" href="#">TVA Modellk</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="">bli</a></li>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Version <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
@@ -47,41 +60,8 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
-	<li>
-      <form class="navbar-form navbar-left">
-        <button type="submit" class="btn btn-default">Save</button>
-      </form>
-</li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-
-
-
-<div class="range-slider">
-{% for i in range(3) %}
-<p> <b>Hello {{i}}</b> </p>
-  <input class="range-slider__range" id="hi" type="range" value="{{100+i*50}}" min="0" max="500" step="50">
-  <!-- to get current value of slider: $('#hi')[0].value. not sure about [0]... -->
-  <span class="range-slider__value">0</span>
-{% endfor %}
-</div>
-
-
-{% if name %}
-<div class="range-slider" data-slider>
-  <span class="range-slider-handle" role="slider" tabindex="0"></span>
-  <span class="range-slider-active-segment"></span>
-  <input type="hidden">
-</div>
-  <img src= {{ url_for('static', filename = 'sc_rev_analysis.svg') }} width="660" height="660" alt="previous" title="Previous" border="0">
-{% else %}
-  <h1>Hello, World!</h1>
-{% endif %}
 </body>
-
-<script>
-rangeSlider();
-</script>
